--- a/templates/experience.html
+++ b/templates/experience.html
@@ -3,7 +3,7 @@
     work experience
 {% endblock %}
       {% block main %}
-    <ul style="color: white; margin-left: 30%; margin-right: 30%; margin-top: 5%;">
+    <ul style="color: white; margin-top: 5%;">
         <h3>Work experience</h3>
         <li>3(y) Civil Engineer 2019/until-now   (BET KAFI): main mission and tasks: Site supervision of Primary and Secondary public works, revision of development plans, tests performance of piles (sonic auscultaion), execution of specifications, elaboration of progress report situations of  projectc, within a technical study office (bet) .</li>
         <li>1 (year) Substitute teacher (2021-2022)  : within the Houari Boumedienne University of Science and Technology.</li>
