--- a/templates/education.html
+++ b/templates/education.html
@@ -4,7 +4,7 @@
 {% endblock %}
       {% block main %}
 
-<ul style="color: white; margin-left: 30%; margin-right: 30%; margin-top: 5%;">
+<ul style="color: white;margin-top: 5%;">
   <h3>Academic education</h3>
   <li>baccalaureate in technical math (2012) : honors</li>
   <li>Bachelor's degree Civil engineering (2017) : at the university of sciences end technology Houari Boumedienne</li>
