--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,13 +33,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="/more">more!</a>
               </li>
-            </ul>
-          </div>
-        </div>
-        <div class="dropdown" style="margin-right: 8%;">
+               <li class="nav-item">
+               <div class="dropdown" style="margin-right: 8%;">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
             Contact
           </button>
+                </li>
+                
+            </ul>
+          </div>
+        </div>
+       
           <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2" >
             <li><p><a href="tel:+213780416469" style="color: white;">phone : +2137804164691</a></p></li>
             <li><a href = "mailto:lotfi.kafi@hotmail.com" style="color: white;">Send Email : lotfi.kafi@hotmail.com</a></li>
