--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    #map{
+      width: 100%;
+      height: 400px;
+      background-color: gray;
+      
+    }
+  </style>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <meta charset="utf-8">
@@ -50,15 +58,10 @@
    
     </div>
     <div class="footer"> 
-      <div id="google_translate_element"></div>
+      
 
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
       <a class="navbar-brand" href="#">
         <img src="{{ url_for('static', filename='bird-flying (1).svg') }}"alt="logo" width="30" height="24">
       </a>
